forth/test/fail/test_const_fold_redundant_udiv_one.af
use' ../../lang.af
fun: .test_const_fold_redundant_udiv_one { val -- out } val 1 u/ end
